fixed carousel on mobile screens

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -146,3 +146,9 @@
     border: 1px solid aliceblue;
     z-index: 999;
 }
+
+@media screen and (max-width: 500px){
+   .caro-img{
+     padding: 5px;
+   }
+}
